<resources>
    <string name="post">게시글</string>
    <string name="app_name">hook</string>
    <string name="chat_title">채팅</string>
    <string name="congress_hint">클릭시 홈페이지로 이동합니다</string>
    <string name="congress_image_title">대회이름 짓기 대회</string>
    <string name="congress_image_date">2023.8.29</string>
    <string name="job_opening">구인</string>
    <string name="job_search">구직</string>
    <string name="home_text">최근에 올라왔어요</string>
    <string name="about_me">제가 원하는 안드 아키텍쳐을 사용할 수 있는 프로젝트에 참여하고 싶어요.</string>
    <string name="user_name">박병준</string>
    <string name="time">13:20</string>
    <string name="user_id">8954sood</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="competition_message">새로운 도전으로 \n달려가 보시겠어요?</string>
    <string name="competition_name">대회명</string>
    <string name="technology">필요 기술</string>
    <string name="situation">상태</string>
    <string name="really_competition_name">진짜 대회 이름</string>
    <string name="really_technology">진짜 필요 기술</string>
    <string name="really_situation">매칭중</string>
    <string name="jop_offer_message">새로운 멤버를 \n찾아보세!</string>
    <string name="job_opening_title">구인 글</string>
    <string name="nickname">Yajin 1234</string>
    <string name="title">마소 해커톤 4명 구합니다.</string>
    <string name="detail">실력을 키우기 위해 꼭 가고 싶었던 해커톤에 저와 함께 하실분을 구합니다! 마소해커톤을 최근에 신경쓰면서 보고 있는데 같이 하실분!!! 안드로이드 서버 디자인 구합니다. 연락주세요.</string>
    <string name="link">https://event-us.kr/aifactory/event/43078</string>
    <string name="job_search_title">구직 글</string>
    <string name="name">이름</string>
    <string name="name_edit_text">이름을 입력하세요</string>
    <string name="student_id">학번</string>
    <string name="student_id_edit_text">학번을 입력하세요</string>
    <string name="contact">연락처</string>
    <string name="contact_edit_text">-을 제외한 연락처를 입력해주세요</string>
    <string name="self_introduction">자기소개</string>
    <string name="self_introduction_edit_text">자신의 기술, 실력등 자유롭게 자신을 표현해 보아요.</string>
    <string name="portfolio">포트폴리오 (선택사항)</string>
    <string name="portfolio_edit_text">\t 자신을 표현할 링크를 첨부해 주세요.</string>
    <string name="my_technology">나의 기술</string>
    <string name="competition">대회명을 입력해주세요</string>
    <string name="explanation">설명</string>
    <string name="explanation_edit_text">팀원 모집에 대해 자세히 서술해 주세요.</string>
    <string name="competition_link">대회 링크</string>
    <string name="competition_link_edit_text">\t 대회 관련 링크를 첨부해 주세요</string>
    <string name="chiffonier">서랍장</string>
    <string name="chiffonier_message">이런 글을\n 작성하셨군요!</string>
    <string name="edit">수정하기</string>
    <string name="setting">설정</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="log_out">로그아웃</string>
    <string name="clock">알람</string>
    <string name="announcement">공지사항</string>
    <string name="android_hook">Android Hook</string>
    <string name="profile">프로필</string>
    <string name="profile_fix">프로필 수정</string>
    <string name="age">17세</string>
    <string name="email">이메일</string>
    <string name="food">마라탕</string>
    <string name="when_food">지금 당장</string>
    <string name="where_health">강당</string>
    <string name="what_health">스쿼트</string>
    <string name="where">장소</string>
    <string name="title_food">제목</string>
    <string name="food_name">음식명</string>
    <string name="eat_where">1학년1반</string>
    <string name="food_title">마라탕 먹을 사람</string>
    <string name="food_detail">강당에서 10시에 같이 드실분 구합니다.</string>
    <string name="exercise">운동</string>
    <string name="exercise_detail">줄넘기</string>
    <string name="really_exercise">줄넘기</string>
    <string name="location">장소</string>
    <string name="location_food">먹을 장소\n</string>
    <string name="jop_search_list_title">나의 기술</string>
    <string name="job_search_intro">자기소개</string>
    <string name="job_search_portfolio_hint">자신을 표현할 링크를 첨부해 주세요.</string>
    <string name="job_search_intro_hint">자기 자신에 대한 어필을 해주세요.</string>
    <string name="job_search_technology">기술\n</string>
    <string name="job_search_technology_exmaple">안드로이드</string>
</resources>