<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.innosync.hook.feature.jopoffer.JopOfferAdapter" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/sky_blue"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="10sp"
                android:textColor="#0066FF"/>
        </LinearLayout>


        <TextView
            android:id="@+id/competition_name"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/really_competition_name"
            android:autoSizeMaxTextSize="30sp"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/user_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/technology"
            android:layout_marginStart="184dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/really_technology"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="19dp"
            android:background="@drawable/current_status_round"
            android:gravity="center"
            android:text="@string/really_situation"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:layout_marginTop="5dp"
            android:layout_marginRight="14dp"
            android:textSize="10sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>