<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.innosync.hook.feature.jopoffer.info.hackathon.support.JobOfferInfoHackathonSupportViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/white"
            android:onClick="@{() -> vm.onClickBack()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_search_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="22dp"
            android:layout_marginStart="23dp"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            app:layout_constraintTop_toBottomOf="@id/back_btn"
            android:layout_marginTop="25dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginTop="10dp"
            android:background="@color/sky_blue"
            android:hint="@string/name_edit_text"
            android:paddingStart="25dp"
            android:textSize="13sp"
            android:textStyle="bold"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/contact"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_edit_text"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            app:layout_constraintTop_toBottomOf="@id/contact"
            android:layout_marginTop="10dp"
            android:background="@color/sky_blue"
            android:hint='@string/contact_edit_text'
            android:paddingStart="25dp"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/self_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contact_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/self_introduction"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/self_introduction_edit_text"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            app:layout_constraintTop_toBottomOf="@id/self_introduction"
            android:layout_marginTop="10dp"
            android:background="@color/sky_blue"
            android:hint='@string/self_introduction_edit_text'
            android:paddingStart="25dp"
            android:paddingTop="14dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:gravity="top"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/portfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/self_introduction_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/portfolio"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/portfolio_edit_text"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:layout_constraintTop_toBottomOf="@id/portfolio"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingStart="25dp"
            android:drawableLeft="@drawable/ic_portfolio"
            android:hint="@string/portfolio_edit_text"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.onClickComplete()}"
            android:src="@drawable/ic_completed2"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>