<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.innosync.hook.feature.jopoffer.info.food.JobOfferInfoFoodViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_offer"
        android:visibility="@{vm.visibility}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@color/white"
            android:onClick="@{() -> vm.onClickBack()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            android:layout_marginTop="22dp"
            android:layout_marginStart="23dp"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/gray_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/post" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="@id/gray_line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="43dp"
            android:layout_marginStart="24dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintTop_toTopOf="@id/gray_line"
            app:layout_constraintStart_toEndOf="@id/profile"
            android:layout_marginTop="50dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toEndOf="@id/profile"
            android:layout_marginTop="5dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="71dp"
            android:background="@color/gray">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="13dp"
                android:layout_marginStart="18dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/really_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/food"
                android:layout_marginTop="13dp"
                android:layout_marginStart="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_food"
                android:textColor="@color/gray2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/really_food"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="13dp"
                android:layout_marginStart="18dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/really_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/really_exercise"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/really_food"
                app:layout_constraintStart_toEndOf="@id/location"
                android:layout_marginTop="13dp"
                android:layout_marginStart="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:visibility="gone"
                android:text="@string/title"
                app:layout_constraintTop_toBottomOf="@id/really_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="18dp"
                android:layout_marginTop="26dp"
                android:textStyle="bold"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="17dp"
                android:layout_marginStart="18dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/detail"
                    android:textSize="13dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/sup_post_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_chat"
                android:onClick="@{() -> vm.onClickChat()}"
                android:background="@color/blue"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>